--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".trying" />
         <activity android:name=".TaskManager" />
+        <activity android:name=".TaskManagerOld" />
         <activity
             android:name=".MainActivity"
             android:configChanges="orientation|keyboardHidden"
