--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
     defaultConfig {
-        applicationId "com.example.focusapp"
+        applicationId "com.alsahmou.focusapp"
         minSdkVersion 14
         targetSdkVersion 29
         versionCode 1
