--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".TaskManager" />
+        <activity android:name=".ExampleDialog" />
+        <activity android:name=".ExampleDialog1" />
         <activity
             android:name=".MainActivity"
             android:configChanges="orientation|keyboardHidden"
